tests/ifcc-test-output/testfiles-affect_without_declaring_var/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:5: error: ‘c’ undeclared (first use in this function)
    2 |     c = 42;
      |     ^
input.c:2:5: note: each undeclared identifier is reported only once for each function it appears in

exit status: 1
